# deepagents-chromafs

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
deepagents_chromafs/: __init__.py  backend.py  redis_cache.py
examples/chroma-data/: chroma.sqlite3
examples/python/: 1_quickstart.ipynb
examples/typescript/: quickstar.js
python/: README.md  pyproject.toml
python/deepagents_chromafs/: __init__.py  backend.py  cache.py  grep.py  tree.py
python/tests/unit_tests/: test_redis_cache.py
tests/unit_tests/: fake_collection.py  test_backend.py  test_grep.py  test_tree.py
typescript/: README.md  package-lock.json  package.json  tsconfig.json  tsup.config.ts
typescript/deepagents_chromafs/: backend.ts  cache.ts  grep.ts  index.ts  redis-cache.ts  tree.ts
typescript/tests/: backend.test.ts  cache.test.ts  grep.test.ts  redis-cache.test.ts  tree.test.ts
